Remove add-opens for Java 17 (#161)